# ParallelSortAccelerator

./: .gitignore  CMakeLists.txt  README.md  direttive.txt  risultati  typst.app
cuda/: CMakeLists.txt  bitonic_sort_v1.cu  cuda_sort_v1.cu  cuda_sort_v2.cu  cuda_sort_v3.cu
cuda/Presentazione/: cc  presentazione.txt
include/: sort.hpp  utils.hpp
openmp/: CMakeLists.txt  openmp_sort.cpp
simd/: CMakeLists.txt  simd_sort.cpp  simd_sort_overhead.cpp  simd_sort_v1.cpp  simd_sort_v2.cpp  simd_sort_v3.cpp
src/: CMakeLists.txt  serial_sort.cpp
tests/: CMakeLists.txt  test_sort.cpp
